feat(apps): add verify

--- a/area/apps/Makefile
+++ b/area/apps/Makefile
@@ -55,3 +55,6 @@ update: update-konfig update-standort update-bezeichner
 
 # Rollout all apps.
 rollout: rollout-konfig rollout-standort rollout-bezeichner
+
+# Verify all apps.
+verify: verify-standort verify-bezeichner
