--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -85,7 +85,7 @@ jobs:
       - run: git submodule sync
       - run: git submodule update --init
       - run: make -C area/apps lint
-      - run: make -C area/apps save-config update rollout
+      - run: make -C area/apps save-config update rollout verify
     resource_class: large
 
   cf_preview:
