feat(apps): add bezeichner

--- a/area/apps/Makefile
+++ b/area/apps/Makefile
@@ -1,7 +1,7 @@
 include secrets.mk
 include konfig.mk
 include standort.mk
-include bezeichner/include.mk
+include bezeichner.mk
 
 kube-linter:
 	kube-linter lint .
