--- a/area/apps/init.yaml
+++ b/area/apps/init.yaml
@@ -2,7 +2,7 @@ client:
   v1:
     config:
       application: <app>
-      version: <ver>
+      version: v<ver>
       environment: production
       command: server
       kind: yaml
