fix(apps): add verify

--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -115,6 +115,7 @@ jobs:
           stack: alexfalkowski/apps/prod
           working_directory: ~/infraops/area/apps
       - run: make -C area/apps rollout
+      - run: make -C area/apps verify
     resource_class: large
 
   cf_preview:
