--- a/area/apps/konfig.yaml
+++ b/area/apps/konfig.yaml
@@ -12,7 +12,7 @@ health:
   duration: 1s
   timeout: 1s
 limiter:
-  kind: user-agent
+  kind: token
   pattern: 1000-S
 source:
   kind: git
@@ -30,6 +30,8 @@ telemetry:
     kind: otlp
     host: https://otlp-gateway-prod-eu-west-2.grafana.net/otlp/v1/traces
     key: /etc/secrets/otlp/token
+token:
+  hash: $argon2id$v=19$m=65536,t=3,p=4$L8nxrWMr7welQoQh7mxCIw$xlUfRaN9FajHewkyxYQxkrP2dkwkIkhZNqt7lvHAw+M
 transport:
   http:
     mux: gateway
