--- a/area/apps/konfig.yaml
+++ b/area/apps/konfig.yaml
@@ -17,7 +17,8 @@ limiter:
 source:
   kind: git
   git:
-    url: https://github.com/alexfalkowski/app-config
+    owner: alexfalkowski
+    repository: app-config
     token: /etc/secrets/gh/token
 telemetry:
   logger:
