feat(k8s): update grafana/agent:v0.41.0

--- a/area/k8s/Makefile
+++ b/area/k8s/Makefile
@@ -28,8 +28,8 @@ update-grafana:
 # Install helm.
 install-helm:
 	helm upgrade --install nginx-ingress-release nginx/ingress-nginx --namespace nginx-ingress --create-namespace --version 4.10.1 -f nginx/values.yaml
-	helm upgrade --install grafana-agent-release --create-namespace grafana/grafana-agent-operator -n grafana --version v0.3.22
-	helm upgrade --install circleci-release circleci/circleci-release-agent --set tokenSecret.token=$(CIRCLECI_K8S_TOKEN) --create-namespace --namespace circleci --set managedNamespaces="{konfig,standort,bezeichner}"
+	helm upgrade --install grafana-agent-release --create-namespace grafana/grafana-agent-operator -n grafana --version v0.3.23
+	helm upgrade --install circleci-release circleci/circleci-release-agent --set tokenSecret.token=$(CIRCLECI_K8S_TOKEN) --create-namespace --namespace circleci --set managedNamespaces="{konfig,standort,bezeichner}" --version v1.2.1
 
 # Update deps.
 update: update-grafana
