--- a/area/apps/init.yaml
+++ b/area/apps/init.yaml
@@ -26,4 +26,5 @@ telemetry:
     host: https://otlp-gateway-prod-eu-west-2.grafana.net/otlp/v1/traces
     key: /etc/secrets/otlp/token
 token:
-  key: /etc/secrets/konfig/token
+  argon2:
+    key: /etc/secrets/konfig/token
