--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -15,6 +15,7 @@ parameters:
     default: false
 
 orbs:
+  codecov: codecov/codecov@4.0.1
   pulumi: pulumi/pulumi@2.1.0
 
 jobs:
@@ -55,6 +56,8 @@ jobs:
           path: test/reports
       - store_artifacts:
           path: test/reports
+      - codecov/upload:
+          file: test/reports/final.cov
     resource_class: large
   release:
     docker:
