--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -118,6 +118,7 @@ jobs:
           stack: alexfalkowski/apps/prod
           working_directory: ~/infraops/area/apps
       - run: make -C area/apps rollout
+      - run: make -C area/apps verify
       - run: make -C area/apps kube-score
     resource_class: large
 
