feat(apps): update versions

--- a/area/apps/lean/init.yaml
+++ b/area/apps/lean/init.yaml
@@ -9,9 +9,9 @@ client:
     mode: 0o600
   retry:
     attempts: 3
-    backoff: 100ms
+    backoff: 1s
     timeout: 10s
-  timeout: 5s
+  timeout: 15s
 environment: production
 telemetry:
   logger:
