--- a/area/apps/lean/konfig.yaml
+++ b/area/apps/lean/konfig.yaml
@@ -30,12 +30,12 @@ transport:
   http:
     retry:
       attempts: 3
-      backoff: 100ms
+      backoff: 1s
       timeout: 10s
-    timeout: 5s
+    timeout: 15s
   grpc:
     retry:
       attempts: 3
-      backoff: 100ms
+      backoff: 1s
       timeout: 10s
-    timeout: 5s
+    timeout: 15s
