--- a/area/apps/lean/konfig.yaml
+++ b/area/apps/lean/konfig.yaml
@@ -24,8 +24,7 @@ telemetry:
     url: https://otlp-gateway-prod-eu-west-2.grafana.net/otlp/v1/traces
     key: /etc/secrets/otlp/token
 token:
-  argon2:
-    hash: $argon2id$v=19$m=65536,t=3,p=4$L8nxrWMr7welQoQh7mxCIw$xlUfRaN9FajHewkyxYQxkrP2dkwkIkhZNqt7lvHAw+M
+  key: /etc/secrets/konfig/token
 transport:
   http:
     retry:
