--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -14,13 +14,10 @@ parameters:
     type: boolean
     default: false
 
-orbs:
-  codecov: codecov/codecov@4.0.1
-
 jobs:
   build:
     docker:
-      - image: alexfalkowski/go:1.22
+      - image: alexfalkowski/go:1.23
     working_directory: ~/infraops
     steps:
       - checkout
@@ -55,8 +52,7 @@ jobs:
           path: test/reports
       - store_artifacts:
           path: test/reports
-      - codecov/upload:
-          file: test/reports/final.cov
+      - run: make codecov-upload
     resource_class: large
   release:
     docker:
