feat(k8s): add metrics server
https://artifacthub.io/packages/helm/metrics-server/metrics-server

--- a/area/k8s/Makefile
+++ b/area/k8s/Makefile
@@ -14,6 +14,7 @@ setup-helm:
 	helm repo add nginx https://kubernetes.github.io/ingress-nginx
 	helm repo add grafana https://grafana.github.io/helm-charts
 	helm repo add circleci https://circleci-public.github.io/cci-k8s-release-agent
+	helm repo add metrics-server https://kubernetes-sigs.github.io/metrics-server/
 	helm repo update
 
 # Setup grafana.
@@ -30,6 +31,7 @@ install-helm:
 	helm upgrade --install nginx-ingress-release nginx/ingress-nginx --namespace nginx-ingress --create-namespace --version 4.11.1 -f nginx/values.yaml
 	helm upgrade --install grafana-agent-release --create-namespace grafana/grafana-agent-operator -n grafana --version v0.4.1
 	helm upgrade --install circleci-release circleci/circleci-release-agent --set tokenSecret.token=$(CIRCLECI_K8S_TOKEN) --create-namespace --namespace circleci --set managedNamespaces="{lean}" --version v1.3.0
+	helm upgrade --install metrics-server-release metrics-server/metrics-server --create-namespace --namespace metrics-server --version 3.12.1
 
 # Update deps.
 update: update-grafana
