build(ci): use different caches

--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -26,25 +26,25 @@ jobs:
       - restore_cache:
           name: restore deps
           keys:
-            - infraops-go-cache-{{ checksum "go.sum" }}
-            - infraops-go-cache-
+            - infraops-build-go-cache-{{ checksum "go.sum" }}
+            - infraops-build-go-cache-
       - run: make dep
       - save_cache:
           name: save deps
-          key: infraops-go-cache-{{ checksum "go.sum" }}
+          key: infraops-build-go-cache-{{ checksum "go.sum" }}
           paths:
             - /home/circleci/go/pkg/mod
       - restore_cache:
           name: restore go build cache
           keys:
-            - infraops-go-build-cache-{{ checksum "go.sum" }}
-            - infraops-go-build-cache-
+            - infraops-build-go-build-cache-{{ checksum "go.sum" }}
+            - infraops-build-go-build-cache-
       - run: make lint
       - run: make sec
       - run: make specs
       - save_cache:
           name: save go build cache
-          key: infraops-go-build-cache-{{ checksum "go.sum" }}
+          key: infraops-build-go-build-cache-{{ checksum "go.sum" }}
           paths:
             - /home/circleci/.cache/go-build
       - run: make coverage
@@ -75,16 +75,26 @@ jobs:
       - restore_cache:
           name: restore deps
           keys:
-            - infraops-go-cache-{{ checksum "go.sum" }}
-            - infraops-go-cache-
+            - infraops-apps-go-cache-{{ checksum "go.sum" }}
+            - infraops-apps-go-cache-
       - run: make dep
       - save_cache:
           name: save deps
-          key: infraops-go-cache-{{ checksum "go.sum" }}
+          key: infraops-apps-go-cache-{{ checksum "go.sum" }}
           paths:
             - /home/circleci/go/pkg/mod
+      - restore_cache:
+          name: restore go build cache
+          keys:
+            - infraops-apps-go-build-cache-{{ checksum "go.sum" }}
+            - infraops-apps-go-build-cache-
       - run: make pulumi-login
       - run: make area=apps pulumi-preview
+      - save_cache:
+          name: save go build cache
+          key: infraops-apps-go-build-cache-{{ checksum "go.sum" }}
+          paths:
+            - /home/circleci/.cache/go-build
     resource_class: large
   apps_update:
     docker:
@@ -98,18 +108,28 @@ jobs:
       - restore_cache:
           name: restore deps
           keys:
-            - infraops-go-cache-{{ checksum "go.sum" }}
-            - infraops-go-cache-
+            - infraops-apps-go-cache-{{ checksum "go.sum" }}
+            - infraops-apps-go-cache-
       - run: make dep
       - save_cache:
           name: save deps
-          key: infraops-go-cache-{{ checksum "go.sum" }}
+          key: infraops-apps-go-cache-{{ checksum "go.sum" }}
           paths:
             - /home/circleci/go/pkg/mod
+      - restore_cache:
+          name: restore go build cache
+          keys:
+            - infraops-apps-go-build-cache-{{ checksum "go.sum" }}
+            - infraops-apps-go-build-cache-
       - run: make pulumi-login
       - run: make area=apps pulumi-update
       - run: make -C area/apps verify
       - run: make -C area/apps kube-score
+      - save_cache:
+          name: save go build cache
+          key: infraops-apps-go-build-cache-{{ checksum "go.sum" }}
+          paths:
+            - /home/circleci/.cache/go-build
     resource_class: large
 
   cf_preview:
@@ -123,16 +143,26 @@ jobs:
       - restore_cache:
           name: restore deps
           keys:
-            - infraops-go-cache-{{ checksum "go.sum" }}
-            - infraops-go-cache-
+            - infraops-cf-go-cache-{{ checksum "go.sum" }}
+            - infraops-cf-go-cache-
       - run: make dep
       - save_cache:
           name: save deps
-          key: infraops-go-cache-{{ checksum "go.sum" }}
+          key: infraops-cf-go-cache-{{ checksum "go.sum" }}
           paths:
             - /home/circleci/go/pkg/mod
+      - restore_cache:
+          name: restore go build cache
+          keys:
+            - infraops-cf-go-build-cache-{{ checksum "go.sum" }}
+            - infraops-cf-go-build-cache-
       - run: make pulumi-login
       - run: make area=cf pulumi-preview
+      - save_cache:
+          name: save go build cache
+          key: infraops-cf-go-build-cache-{{ checksum "go.sum" }}
+          paths:
+            - /home/circleci/.cache/go-build
     resource_class: large
   cf_update:
     docker:
@@ -145,16 +175,26 @@ jobs:
       - restore_cache:
           name: restore deps
           keys:
-            - infraops-go-cache-{{ checksum "go.sum" }}
-            - infraops-go-cache-
+            - infraops-cf-go-cache-{{ checksum "go.sum" }}
+            - infraops-cf-go-cache-
       - run: make dep
       - save_cache:
           name: save deps
-          key: infraops-go-cache-{{ checksum "go.sum" }}
+          key: infraops-cf-go-cache-{{ checksum "go.sum" }}
           paths:
             - /home/circleci/go/pkg/mod
+      - restore_cache:
+          name: restore go build cache
+          keys:
+            - infraops-cf-go-build-cache-{{ checksum "go.sum" }}
+            - infraops-cf-go-build-cache-
       - run: make pulumi-login
       - run: make area=cf pulumi-update
+      - save_cache:
+          name: save go build cache
+          key: infraops-cf-go-build-cache-{{ checksum "go.sum" }}
+          paths:
+            - /home/circleci/.cache/go-build
     resource_class: large
 
   do_preview:
@@ -168,16 +208,26 @@ jobs:
       - restore_cache:
           name: restore deps
           keys:
-            - infraops-go-cache-{{ checksum "go.sum" }}
-            - infraops-go-cache-
+            - infraops-do-go-cache-{{ checksum "go.sum" }}
+            - infraops-do-go-cache-
       - run: make dep
       - save_cache:
           name: save deps
-          key: infraops-go-cache-{{ checksum "go.sum" }}
+          key: infraops-do-go-cache-{{ checksum "go.sum" }}
           paths:
             - /home/circleci/go/pkg/mod
+      - restore_cache:
+          name: restore go build cache
+          keys:
+            - infraops-do-go-build-cache-{{ checksum "go.sum" }}
+            - infraops-do-go-build-cache-
       - run: make pulumi-login
       - run: make area=do pulumi-preview
+      - save_cache:
+          name: save go build cache
+          key: infraops-do-go-build-cache-{{ checksum "go.sum" }}
+          paths:
+            - /home/circleci/.cache/go-build
     resource_class: large
   do_update:
     docker:
@@ -190,16 +240,26 @@ jobs:
       - restore_cache:
           name: restore deps
           keys:
-            - infraops-go-cache-{{ checksum "go.sum" }}
-            - infraops-go-cache-
+            - infraops-do-go-cache-{{ checksum "go.sum" }}
+            - infraops-do-go-cache-
       - run: make dep
       - save_cache:
           name: save deps
-          key: infraops-go-cache-{{ checksum "go.sum" }}
+          key: infraops-do-go-cache-{{ checksum "go.sum" }}
           paths:
             - /home/circleci/go/pkg/mod
+      - restore_cache:
+          name: restore go build cache
+          keys:
+            - infraops-do-go-build-cache-{{ checksum "go.sum" }}
+            - infraops-do-go-build-cache-
       - run: make pulumi-login
       - run: make area=do pulumi-update
+      - save_cache:
+          name: save go build cache
+          key: infraops-do-go-build-cache-{{ checksum "go.sum" }}
+          paths:
+            - /home/circleci/.cache/go-build
     resource_class: large
 
   gh_preview:
@@ -213,16 +273,26 @@ jobs:
       - restore_cache:
           name: restore deps
           keys:
-            - infraops-go-cache-{{ checksum "go.sum" }}
-            - infraops-go-cache-
+            - infraops-gh-go-cache-{{ checksum "go.sum" }}
+            - infraops-gh-go-cache-
       - run: make dep
       - save_cache:
           name: save deps
-          key: infraops-go-cache-{{ checksum "go.sum" }}
+          key: infraops-gh-go-cache-{{ checksum "go.sum" }}
           paths:
             - /home/circleci/go/pkg/mod
+      - restore_cache:
+          name: restore go build cache
+          keys:
+            - infraops-gh-go-build-cache-{{ checksum "go.sum" }}
+            - infraops-gh-go-build-cache-
       - run: make pulumi-login
       - run: make area=gh pulumi-preview
+      - save_cache:
+          name: save go build cache
+          key: infraops-gh-go-build-cache-{{ checksum "go.sum" }}
+          paths:
+            - /home/circleci/.cache/go-build
     resource_class: large
   gh_update:
     docker:
@@ -235,16 +305,26 @@ jobs:
       - restore_cache:
           name: restore deps
           keys:
-            - infraops-go-cache-{{ checksum "go.sum" }}
-            - infraops-go-cache-
+            - infraops-gh-go-cache-{{ checksum "go.sum" }}
+            - infraops-gh-go-cache-
       - run: make dep
       - save_cache:
           name: save deps
-          key: infraops-go-cache-{{ checksum "go.sum" }}
+          key: infraops-gh-go-cache-{{ checksum "go.sum" }}
           paths:
             - /home/circleci/go/pkg/mod
+      - restore_cache:
+          name: restore go build cache
+          keys:
+            - infraops-gh-go-build-cache-{{ checksum "go.sum" }}
+            - infraops-gh-go-build-cache-
       - run: make pulumi-login
       - run: make area=gh pulumi-update
+      - save_cache:
+          name: save go build cache
+          key: infraops-gh-go-build-cache-{{ checksum "go.sum" }}
+          paths:
+            - /home/circleci/.cache/go-build
     resource_class: large
 
 workflows:
