--- a/area/apps/lean/konfig.yaml
+++ b/area/apps/lean/konfig.yaml
@@ -26,6 +26,7 @@ telemetry:
     headers:
       Authorization: /etc/secrets/otlp/token
 token:
+  kind: key
   key: /etc/secrets/konfig/token
 transport:
   http:
