--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,86 +1,21 @@
-issues:
-  exclude-dirs:
-    - tmp
 linters-settings:
   lll:
     line-length: 180
 linters:
-  disable-all: true
-  enable:
-    - asasalint
-    - asciicheck
-    - bidichk
-    - containedctx
-    - contextcheck
-    - copyloopvar
-    - cyclop
-    - decorder
-    - dogsled
-    - dupl
-    - dupword
-    - durationcheck
-    - errchkjson
-    - errname
-    - errorlint
-    - exhaustive
-    - forbidigo
-    - funlen
-    - gci
-    - gocognit
-    - goconst
-    - gocritic
-    - gocyclo
-    - godot
-    - godox
-    - gofmt
-    - gofumpt
-    - goheader
-    - goimports
-    - gomoddirectives
-    - gomodguard
-    - goprintffuncname
-    - gosec
-    - gosmopolitan
-    - gosimple
-    - grouper
-    - importas
-    - inamedparam
-    - lll
-    - loggercheck
-    - maintidx
-    - makezero
-    - mirror
-    - misspell
-    - musttag
-    - nakedret
-    - nestif
-    - nilerr
-    - nilnil
-    - nlreturn
-    - noctx
-    - nolintlint
-    - nonamedreturns
-    - nosprintfhostport
-    - perfsprint
-    - prealloc
-    - predeclared
-    - promlinter
-    - protogetter
-    - reassign
-    - revive
-    - rowserrcheck
-    - sloglint
-    - sqlclosecheck
-    - stylecheck
-    - tenv
-    - testableexamples
-    - testifylint
-    - testpackage
-    - thelper
-    - tparallel
-    - unconvert
-    - unparam
-    - unused
-    - wastedassign
-    - whitespace
-    - wsl
+  enable-all: true
+  disable:
+    - exportloopref
+    - tagalign
+    - gochecknoinits
+    - bodyclose
+    - depguard
+    - exhaustruct
+    - fatcontext
+    - forcetypeassert
+    - gochecknoglobals
+    - ireturn
+    - mnd
+    - paralleltest
+    - varnamelen
+    - wrapcheck
+    - tagliatelle
