feat(apps): update versions
https://github.com/alexfalkowski/go-service/pull/1224

--- a/area/apps/lean/init.yaml
+++ b/area/apps/lean/init.yaml
@@ -30,4 +30,4 @@ telemetry:
       Authorization: /etc/secrets/otlp/token
 token:
   kind: key
-  key: /etc/secrets/konfig/token
+  secret: /etc/secrets/konfig/token
