feat(all): move to internal

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -4,7 +4,6 @@ linters-settings:
 linters:
   enable-all: true
   disable:
-    - exportloopref
     - tagalign
     - gochecknoinits
     - bodyclose
@@ -18,3 +17,4 @@ linters:
     - varnamelen
     - wrapcheck
     - tagliatelle
+    - tenv
