feat(apps): update konfig v1.449.0
https://github.com/alexfalkowski/konfig/pull/1952

--- a/area/apps/lean/konfig.yaml
+++ b/area/apps/lean/konfig.yaml
@@ -28,7 +28,7 @@ telemetry:
     headers:
       Authorization: /etc/secrets/otlp/token
 token:
-  kind: key
+  kind: token
   secret: /etc/secrets/konfig/token
 transport:
   http:
