--- a/area/apps/lean/init.yaml
+++ b/area/apps/lean/init.yaml
@@ -29,5 +29,5 @@ telemetry:
     headers:
       Authorization: /etc/secrets/otlp/token
 token:
-  kind: key
+  kind: token
   secret: /etc/secrets/konfig/token
