--- a/area/apps/lean/konfig.yaml
+++ b/area/apps/lean/konfig.yaml
@@ -28,7 +28,7 @@ telemetry:
     headers:
       Authorization: /etc/secrets/otlp/token
 token:
-  kind: token
+  kind: opaque
   secret: /etc/secrets/konfig/token
 transport:
   http:
