--- a/area/k8s/grafana/logs.yaml
+++ b/area/k8s/grafana/logs.yaml
@@ -1,10 +1,60 @@
-alloy:
-  configMap:
-    create: true
-  clustering:
-    enabled: false
-  controller:
-    type: "daemonset"
-  mounts:
-    # -- Mount /var/log from the host into the container for log collection.
-    varlog: true
+apiVersion: monitoring.grafana.com/v1alpha1
+kind: LogsInstance
+metadata:
+  labels:
+    agent: grafana-agent
+  name: grafana-agent-logs
+  namespace: grafana
+spec:
+  clients:
+    - basicAuth:
+        password:
+          key: password
+          name: logs-secret
+        username:
+          key: username
+          name: logs-secret
+      externalLabels:
+        cluster: lean-thoughts
+      url: https://logs-prod-012.grafana.net/loki/api/v1/push
+  podLogsNamespaceSelector: {}
+  podLogsSelector:
+    matchLabels:
+      instance: primary
+---
+apiVersion: monitoring.grafana.com/v1alpha1
+kind: PodLogs
+metadata:
+  labels:
+    instance: primary
+  name: kubernetes-logs
+  namespace: grafana
+spec:
+  namespaceSelector:
+    any: true
+  pipelineStages:
+    - cri: {}
+  relabelings:
+    - sourceLabels:
+        - __meta_kubernetes_pod_node_name
+      targetLabel: __host__
+    - action: replace
+      sourceLabels:
+        - __meta_kubernetes_namespace
+      targetLabel: namespace
+    - action: replace
+      sourceLabels:
+        - __meta_kubernetes_pod_name
+      targetLabel: pod
+    - action: replace
+      sourceLabels:
+        - __meta_kubernetes_container_name
+      targetLabel: container
+    - replacement: /var/log/pods/*$1/*.log
+      separator: /
+      sourceLabels:
+        - __meta_kubernetes_pod_uid
+        - __meta_kubernetes_pod_container_name
+      targetLabel: __path__
+  selector:
+    matchLabels: {}
